<resources>
    <string name="app_name">Southwest Running App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_sign_out">"Sign Out"</string>
    <string name="makeworkout_view">Make Workout</string>
    <string name="getworkout_listview">Get Workouts</string>
    <string name="pictures_upload">Upload Pictures</string>
    <string name="completed_workout">Completed Workout</string>
    <string name="SouthwestAbout">Southwest Cross Country is a 2A high school team located in eastern North Carolina.</string>
    <string name="SW_image_description" />
    <string name="title_activity_student_list">StudentList</string>

</resources>
