<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="start.application.RunningApp.MainActivity">

    <TextView
        android:id="@+id/helloworld"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:text="@string/SouthwestAbout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <ImageView
        android:id="@+id/rImage"
        android:layout_width="410dp"
        android:layout_height="184dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helloworld" />

    <TextView
        android:id="@+id/ShowEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/sign_out"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helloworld"
        app:layout_constraintVertical_bias="0.953" />

    <Button
        android:id="@+id/locationButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="111dp"
        android:layout_height="59dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="162dp"
        android:onClick="launchLocation"
        android:text="Meets"
        android:textColor="#000000"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rImage" />

    <Button
        android:id="@+id/getworkoutListButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="111dp"
        android:layout_height="59dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:onClick="launchGetWorkoutListView"
        android:text="@string/getworkout_listview"
        android:textColor="#000000"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rImage" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="111dp"
        android:layout_height="59dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:onClick="launchUploadPictures"
        android:text="@string/pictures_upload"
        android:textColor="#000000"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getworkoutListButton"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="111dp"
        android:layout_height="59dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:onClick="launchCompletedWorkouts"
        android:text="@string/completed_workout"
        android:textColor="#000000"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getworkoutListButton" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>